--- a/Day41-55/01.快速上手.md
+++ b/Day41-55/01.快速上手.md
@@ -359,7 +359,7 @@ Django框架通过shortcuts模块的快捷函数`render`简化了渲染模板的
    </body>
    </html>
    ```
-   在上面的模板页中我们使用了`{{ greeting }}`这样的模板占位符语法，也使用了`{% for %}`这样的模板指令，这些都是Django模板语言（DTL）的一部分。如果对此不熟悉并不要紧，我们会在后续的内容中进一步的讲解，而且我们刚才也说到了，还有更好的选择就是使用前端渲染，当然这是后话。
+   在上面的模板页中我们使用了`{{ greeting }}`这样的模板占位符语法，也使用了`{% for in %}`这样的模板指令，这些都是Django模板语言（DTL）的一部分。如果对此不熟悉并不要紧，我们会在后续的内容中进一步的讲解，而且我们刚才也说到了，还有更好的选择就是使用前端渲染，当然这是后话。
 
 3. 回到应用目录，修改views.py文件。
 
